<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="273dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Button01"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Button01"
        style="@style/botonPrincipal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Jugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/Button02"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Configurar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button01" />

    <Button
        android:id="@+id/Button03"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="lanzarAcercaDe"
        android:text="@string/Acercade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button02" />

    <Button
        android:id="@+id/Button04"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="salir"
        android:text="@string/Salir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button03" />


</androidx.constraintlayout.widget.ConstraintLayout>